cambios firebase notification implemented

--- a/MasterDetail.Android/MasterDetail.Android.csproj
+++ b/MasterDetail.Android/MasterDetail.Android.csproj
@@ -79,13 +79,17 @@
     <PackageReference Include="Xamarin.GooglePlayServices.Auth">
       <Version>60.1142.1</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.GooglePlayServices.Base">
+      <Version>60.1142.1</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.GooglePlayServices.Basement">
+      <Version>60.1142.1</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.GooglePlayServices.Tasks">
       <Version>60.1142.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FirebaseAuthService.cs" />
-    <Compile Include="GoogleLoginActivity.cs" />
     <Compile Include="Implementacion\PathService.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
