--- a/MasterDetail.iOS/MasterDetail.iOS.csproj
+++ b/MasterDetail.iOS/MasterDetail.iOS.csproj
@@ -160,6 +160,9 @@
     <PackageReference Include="Acr.UserDialogs">
       <Version>7.0.1</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Azure.Mobile.Client">
+      <Version>4.1.1</Version>
+    </PackageReference>
     <PackageReference Include="sqlite-net-pcl">
       <Version>1.5.231</Version>
     </PackageReference>
