--- a/MasterDetail.Android/MasterDetail.Android.csproj
+++ b/MasterDetail.Android/MasterDetail.Android.csproj
@@ -20,6 +20,10 @@
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
     <AndroidKeyStore>false</AndroidKeyStore>
+    <AndroidSigningKeyStore>C:\Users\exe_6\AppData\Local\Xamarin\Mono for Android\Keystore\Zeroexe\Zeroexe.keystore</AndroidSigningKeyStore>
+    <AndroidSigningStorePass>258456</AndroidSigningStorePass>
+    <AndroidSigningKeyAlias>zeroexe</AndroidSigningKeyAlias>
+    <AndroidSigningKeyPass>167349</AndroidSigningKeyPass>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -58,6 +62,12 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Azure.Mobile.Client">
       <Version>4.1.1</Version>
+    </PackageReference>
+    <PackageReference Include="MvvmLightStd10">
+      <Version>5.4.1.2</Version>
+    </PackageReference>
+    <PackageReference Include="PropertyChanged.Fody">
+      <Version>3.0.1</Version>
     </PackageReference>
     <PackageReference Include="sqlite-net-pcl">
       <Version>1.5.231</Version>
