--- a/MasterDetail.Android/MasterDetail.Android.csproj
+++ b/MasterDetail.Android/MasterDetail.Android.csproj
@@ -75,6 +75,9 @@
     <PackageReference Include="Xam.Plugin.Connectivity">
       <Version>3.2.0</Version>
     </PackageReference>
+    <PackageReference Include="Xam.Plugins.Settings">
+      <Version>3.1.1</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Firebase.Auth">
       <Version>60.1142.1</Version>
     </PackageReference>
