--- a/MasterDetail/MasterDetail.csproj
+++ b/MasterDetail/MasterDetail.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="PropertyChanged.Fody" Version="3.0.1" />
     <PackageReference Include="sqlite-net-pcl" Version="1.5.231" />
     <PackageReference Include="Xam.Plugin.Connectivity" Version="3.2.0" />
+    <PackageReference Include="Xam.Plugins.Settings" Version="3.1.1" />
     <PackageReference Include="Xamarin.Forms" Version="3.4.0.1009999" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
